--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "^16.2.0",
     "react-datepicker": "^0.63.0",
     "react-dom": "^16.2.0",
+    "react-download-link": "^2.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
